--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,14 @@ body {
 	min-height: 90vh;
 	min-width: 90vw;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
 }
 
 .square {
@@ -15,4 +21,10 @@ body {
 	height: 100px;
 	border: 5px solid black;
 	margin: -5px -5px 0 0;
+
+	text-align: center;
+	vertical-align: middle;
+	line-height: 100px;
+
+	font-size: 50px;
 }
