--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body {
 	display: flex;
+	flex-direction: column;
 }
 
 .container {
-	min-height: 90vh;
-	min-width: 90vw;
+	min-height: 80vh;
+	min-width: 80vw;
+
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -27,4 +29,30 @@ body {
 	line-height: 100px;
 
 	font-size: 50px;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	height: 50px;
+	font-size: 50px;
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+
+	margin: 0 auto;
+}
+
+.form * {
+	display: block;
+	margin-top: 20px;
+	font-size: 30px;
+}
+
+.buttons {
+	margin: 0 auto;
 }
